@@ -32,6 +32,7 @@ v1.4 Changes {#Changes_v1.4}
 * Rare completion frequency computation error
 * Improve dictionary caching sterategy
 * Fixed help-mode error ("help-setup-xref: Symbol's value as variable is void: help-xref-following")
+* Fixed auto-complete couldn't use pos-tip on Windows
 
 v1.3.1 Changes {#Changes_v1.3.1}
 ------------
